--- a/.github/workflows/build-bridge-www.yaml
+++ b/.github/workflows/build-bridge-www.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+          cache-dependency-path: bridge-www/yarn.lock
       - run: yarn
         working-directory: ./bridge-www
       - run: |
