--- a/bridge/package.json
+++ b/bridge/package.json
@@ -63,14 +63,17 @@
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^5.1.6",
     "web3-core-promievent": "^1.5.3"
   },
   "dependencies": {
     "@pagerduty/pdjs": "^2.2.3",
+    "@planetarium/account": "2.4.0",
     "@planetarium/account-aws-kms": "^0.0.2",
     "@planetarium/aws-kms-provider": "0.3.4",
+    "@planetarium/bencodex": "0.2.2",
     "@planetarium/sign": "^0.0.3",
+    "@planetarium/tx": "2.4.0",
     "@safe-global/safe-core-sdk": "^3.3.2",
     "@safe-global/safe-core-sdk-types": "^1.9.0",
     "@safe-global/safe-ethers-lib": "^1.9.2",
@@ -96,6 +99,7 @@
     "ethers-aws-kms-signer": "^1.3.2",
     "read-bigint": "^0.1.6",
     "sqlite3": "^5.1.1",
+    "tsx": "^3.12.7",
     "web3": "1.5.3"
   }
 }
